# nxp_simtemp

./: .gitignore  README.md  hello.c  nxp_challenge_desc.md  nxp_simtemp.c
cli/: simtemp_cli.py
docs/: AI_NOTES.md  DESIGN.md  TESTPLAN.md
gui/: CMakeLists.txt  main.cpp
kernel/: Makefile  nxp_simtemp.c  nxp_simtemp.h
scripts/: build.sh  run_demo.sh  run_unit_tests.sh
tests/: CMakeLists.txt  simtemp_gtest.cpp
